--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,23 @@
-ADisj		core	
-AVM		core		
+ADisj		core	*
+AVM		core	*	
 colors		treemg	*
-Control		core
+Control		core	*
 core			*
-Decls		core
-feats		core
+Decls		core	*
+feats		core	*
 fields		morphmg
 frame		framemg
 hierarchy	framemg
-MG		core	
+MG		core	*
 morph		morphmg
 morph2		morphmg
 pg			*
 rank		treemg	*
 sem		treemg	*
 syn		treemg	*
-synsem		treemg	
+synsem		treemg	*
 tag		treemg	*
 tree		treemg	*
 unicity		treemg	*
-Value		core
+Value		core	*
 Var			*
