moved some contribs in framemg

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,8 +6,8 @@ core			*
 Decls		core	*
 feats		core	*
 fields		morphmg *
-frame		framemg
-hierarchy	framemg
+frame		framemg	*
+hierarchy	framemg	*
 MG		core	*
 morph		morphmg *
 morph2		morphmg *
