--- a/contributions/core/bricks/avm/TODO
+++ b/contributions/core/bricks/avm/TODO
@@ -1,2 +1,4 @@
 convert.yap calls the converter in brick frame. 
 This means that the brick frame has to be included before, or everything crashes...
+
+Fix: now, avm has to be included before. 
